--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 
 body{
     background: url("../img/bg.png") repeat;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,.75) 0%,rgba(0,0,0,0.9) 100%), url("../img/bg.png");
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.9) 100%), url("../img/bg.png");
     background-repeat: repeat;
     background-attachment: fixed;
     background-position: center center;
